<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/please_title"
        android:textColor="#0000FF" />

    <EditText
        android:id="@+id/editText_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textViewDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/please_description"
        android:textColor="#0000FF" />

    <EditText
        android:id="@+id/editText_description"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/buttonEditReturn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_return" />

    <Button
        android:id="@+id/buttonEditCancrel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_cancel" />

</LinearLayout>